# RustDirStat

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/fsops/: mod.rs
src/gui/: app.rs  mod.rs
src/model/: extension_index.rs  mod.rs
src/scanner/: crossdev.rs  inodefilter.rs  mod.rs  traverse.rs  walk.rs
src/treemap/: cushion.rs  layout.rs  mod.rs  palette.rs
