[package]
name = "rustdirstat"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "WinDirStat-style disk analyzer with cushion treemap visualization"
license = "GPL-3.0"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.28"
egui_extras = "0.28"
jwalk = "0.8"
petgraph = "0.6"
filesize = "0.2"
trash = "5.2"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
insta = "1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
pedantic = "warn"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
